# clean_ttl_hook

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  setup.py
clean_ttl_hook/: main.py
hook/: .pre-commit-hooks.yml
test files/: test.ttl  testbackup.ttl
