[tool.poetry]
name = "clean_ttl_hook"
version = "0.2.0"
description = ""
authors = ["adamdavis2 <adam.davis@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.1.1"
rdfx = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clean_ttl_hook = "clean_ttl_hook.main:main"