# setup.cfg
[metadata]
name = clean_ttl
description = removes unused prefixes from .ttl files and sorts the remaining prefixes alphabetically
version = 0.1.0
author = Adam Davis
author_email = adam.davis@surroundaustralia.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    clean_ttl = clean_ttl_pre_commit.main:main